# vecmini

./: .gitignore  CMakeLists.txt  README.md  test_bridge.py
include/: AlignedAllocator.h  IndexFlat.h  IndexIVF.h  IndexIVFPQ.h  IndexPQ.h  clustering.h
src/: IndexFlat.cpp  IndexIVF.cpp  IndexIVFPQ.cpp  IndexPQ.cpp  bindings.cpp  clustering.cpp
tests/: bitfoldtest.txt  metadatatest.cpp  test_flat_accuracy.cpp  testres.txt
